ui/tui/src/investigations/snapshots/hub_tui__investigations__command__tests__ci_investigation_command.snap
---
source: ui/tui/src/investigations/command.rs
expression: "render(&compose(config, cwd(), &no_mcp_servers(), Some(CLEANUP), None))"
---
cwd: /tmp/hub-test-worktree
env:
  HUB_SYSTEM_PROMPT=<system prompt starting "## Purpose">
  HUB_TASK_PROMPT=Investigate the CI failure for repo ooloth/hub. Run URL: https://github.com/ooloth/hub/actions/runs/123
shell: claude --permission-mode auto --strict-mcp-config --model opus --allowedTools 'Bash' --append-system-prompt "$HUB_SYSTEM_PROMPT" "$HUB_TASK_PROMPT"; cd ~ && git -C '/tmp/bare' worktree remove --force '/tmp/wt' 2>/dev/null || true
