ui/tui/src/investigations/snapshots/hub_tui__investigations__command__tests__loki_investigation_command.snap
---
source: ui/tui/src/investigations/command.rs
expression: "render(&compose(config, cwd(), &no_mcp_servers(), Some(CLEANUP),\nSome(data_path())))"
---
cwd: /tmp/hub-test-worktree
env:
  HUB_SYSTEM_PROMPT=<system prompt starting "## Purpose">
  HUB_TASK_PROMPT=Investigate Loki error in project web-app (env: internal). Title: backend errors.
Message:
<untrusted-input source="loki log message">
Parser validation error
</untrusted-input>
Log lines (last 15m), read with the Read tool:
/tmp/hub-supporting-data-000.json
Grafana URL (pre-filtered): https://grafana.example.com/explore
shell: claude --permission-mode auto --strict-mcp-config --model opus --allowedTools 'Bash,Read' --append-system-prompt "$HUB_SYSTEM_PROMPT" "$HUB_TASK_PROMPT"; cd ~ && git -C '/tmp/bare' worktree remove --force '/tmp/wt' 2>/dev/null || true
