ui/tui/src/investigations/snapshots/hub_tui__investigations__command__tests__pr_ask_investigation_command.snap
---
source: ui/tui/src/investigations/command.rs
expression: "render(&compose(config, cwd(), &no_mcp_servers(), None, None))"
---
cwd: /tmp/hub-test-worktree
env:
  HUB_SYSTEM_PROMPT=<system prompt starting "PR #7 (ooloth/hub). This PR was authored by someone else. Post comments; do not make local changes.">
  HUB_TASK_PROMPT=
shell: claude --permission-mode auto --strict-mcp-config --model opus --allowedTools 'Bash,Read,Edit,Write,Glob,Grep' --append-system-prompt "$HUB_SYSTEM_PROMPT"
