ui/tui/src/investigations/snapshots/hub_tui__investigations__command__tests__pr_review_investigation_command_with_an_mcp_server.snap
---
source: ui/tui/src/investigations/command.rs
expression: "render(&compose(config, cwd(), &atlassian(), None, None))"
---
cwd: /tmp/hub-test-worktree
env:
  HUB_SYSTEM_PROMPT=<system prompt starting "PR #7 (ooloth/hub). This is your PR. Identify issues; make no local changes.">
  HUB_TASK_PROMPT=/review-code PR #7 (ooloth/hub)
  HUB_MCP_CONFIG={"mcpServers":{"atlassian-rovo":{"type":"http","url":"https://mcp.atlassian.com/v1/mcp"}}}
shell: claude --permission-mode auto --strict-mcp-config --mcp-config "$HUB_MCP_CONFIG" --model opus --allowedTools 'Bash,Read,Edit,Write,Glob,Grep' --append-system-prompt "$HUB_SYSTEM_PROMPT" "$HUB_TASK_PROMPT"
